Fix wiki scrollbar + sizing

--- a/client/src/menu/wikiSearch.css
+++ b/client/src/menu/wikiSearch.css
@@ -1,10 +1,10 @@
 .wiki-search {
-    display: flex;
-    flex-direction: column;
     width: 100%;
     height: 100%;
     max-height: 100%;
     max-width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 .wiki-search > .wiki-search-bar {
     display: flex;
@@ -19,4 +19,5 @@
 }
 .wiki-search > .wiki-results {
     overflow-y: scroll;
+    flex: 1 1;
 }
